crates/walrus-parser/snapshots/escaped_char_lit.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Char(
            Escaped(
                EscapedChar {
                    span: 0..4,
                    text: "\'\\a\'",
                },
            ),
        ),
    ),
)
