crates/walrus-parser/snapshots/false_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Lit(
            Bool(
                False(
                    KwFalse {
                        span: 0..5,
                    },
                ),
            ),
        ),
    ),
)
