crates/walrus-parser/snapshots/false_lit.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Bool(
            False(
                KwFalse {
                    span: 0..5,
                },
            ),
        ),
    ),
)
