crates/walrus-parser/snapshots/field_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Field(
            FieldExpr {
                base: Var(
                    Var(
                        Ident {
                            span: 0..1,
                            text: "x",
                        },
                    ),
                ),
                dot: Dot {
                    span: 1..2,
                },
                var: Var(
                    Ident {
                        span: 2..4,
                        text: "_0",
                    },
                ),
            },
        ),
    ),
)
