crates/walrus-parser/snapshots/float_lit.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Float(
            FloatLit(
                Float {
                    span: 0..10,
                    text: "1234.56789",
                },
            ),
        ),
    ),
)
