crates/walrus-parser/snapshots/fn_type.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Fn {
            args: Delimited {
                open: LParen {
                    span: 0..1,
                },
                inner: Punctuated0 {
                    first: Some(
                        Var(
                            Var(
                                Ident {
                                    span: 1..2,
                                    text: "T",
                                },
                            ),
                        ),
                    ),
                    tail: [],
                    trail: None,
                },
                close: RParen {
                    span: 2..3,
                },
            },
            ret: RetType {
                thin_arrow: ThinArrow {
                    span: 4..6,
                },
                ty: Var(
                    Var(
                        Ident {
                            span: 7..8,
                            text: "V",
                        },
                    ),
                ),
            },
        },
    ),
)
