crates/walrus-parser/snapshots/if_else_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        If(
            IfExpr {
                kw_if: KwIf {
                    span: 0..2,
                },
                test_expr: Lit(
                    Bool(
                        True(
                            KwTrue {
                                span: 3..7,
                            },
                        ),
                    ),
                ),
                then_branch: Block(
                    Block {
                        lcurly: LCurly {
                            span: 8..9,
                        },
                        stmts: [],
                        expr: None,
                        rcurly: RCurly {
                            span: 9..10,
                        },
                    },
                ),
                else_branch: Some(
                    ElseBlock {
                        kw_else: KwElse {
                            span: 11..15,
                        },
                        block: Block(
                            Block {
                                lcurly: LCurly {
                                    span: 16..17,
                                },
                                stmts: [],
                                expr: None,
                                rcurly: RCurly {
                                    span: 17..18,
                                },
                            },
                        ),
                    },
                ),
            },
        ),
    ),
)
